--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@ body {
     <body>
         <div class="container">
             <div class="text">
-        <p class="first text">Hi</p>
-        <p class="second text">I'm <span style="color: orange;">Kerby</span></p>
-        <p class="second text">a Frontend Developer</p>
-        <p class="third text"><b>Lorem  dolor sit amet consectetur adipisicing elit. Cupiditate adipisci unde error magni! </b><br><b>Repellendus cumque officiis eum aspernatur molestiae. 
-            Iste facere molestiaillum.</b></p>
+
+        <p class="first text">Hi I'm <span style="color: rgb(219, 56, 27);">Kerby</span></p>
+        <p class="first text">a Frontend Developer</p>
             </div>
             <div class="picture">
                 <img src="./assets/me.png" alt="me" height="400px" width="400px">
