--- a/Experience.html
+++ b/Experience.html
@@ -14,9 +14,9 @@
                 <div class="navdiv">
                     <div class="logo"><a href="#"><span style="color: red;">Ker</span>by</a></div>
                     <ul class="nav-links">
-                        <li><a href="#"><span style="color: red;">Home</span></a></li>
-                        <li><a href="../page/about.html">About</a></li>
-                        <li><a href="../page/Experience.html">Experience</a></li>
+                        <li><a href="../index.html"> Home </a></li>
+                        <li><a href="../page/about.html"> About </a></li>
+                        <li><a href="../page/Experience.html"><span style="color: red;"> Experience </span></a></li>
                     </ul>
                     <button><a href="../page/contact.html">Contact me</a></button>
                 </div>
@@ -39,9 +39,9 @@ body {
         <div class="container">
             <div class="text">
         
-        <p class="second text">My <span style="color: orange;">Experience</span> are</p>
-        <p class="third text"><b>Lorem  dolor sit amet consectetur adipisicing elit. Cupiditate adipisci unde error magni! </b><br><b>Repellendus cumque officiis eum aspernatur molestiae. 
-            Iste facere molestiaillum.</b></p>
+        <p class="second text"><b>• Built responsive websites using HTML, CSS, and JavaScript, ensuring compatibility across modern browsers and mobile devices.</b>
+            <br><b>• Used Git and GitHub for version control and project collaboration.</b></p>
+            
             </div>
             <div class="picture">
                 <img src="../assets/me.png" alt="me" height="400px" width="400px">
