--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
                 <div class="navdiv">
                     <div class="logo"><a href="#"><span style="color: red;">Ker</span>by</a></div>
                     <ul class="nav-links">
-                        <li><a href="../index.html"><span style="color: red;">Home</span></a></li>
-                        <li><a href="../page/about.html">About</a></li>
+                        <li><a href="../index.html"> Home </a></li>
+                        <li><a href="../page/about.html"><span style="color: red;">About</span></a></li>
                         <li><a href="../page/Experience.html">Experience</a></li>
                     </ul>
                     <button><a href="../page/contact.html">Contact me</a></button>
@@ -38,11 +38,8 @@ body {
     <body>
         <div class="container">
             <div class="text">
-        <p class="first text">Hi</p>
-        <p class="second text">I'm <span style="color: orange;">Kerby</span></p>
-        <p class="second text">Im a student a college student</p>
-        <p class="third text"><b>Lorem  dolor sit amet consectetur adipisicing elit. Cupiditate adipisci unde error magni! </b><br><b>Repellendus cumque officiis eum aspernatur molestiae. 
-            Iste facere molestiaillum.</b></p>
+        <p class="second text"><b>I started my journey as a Front-End Developer since i was studying in Cordva Public College</b>
+            <br><b> I learned a lot of different programming language during my College years.</b></p>
             </div>
             <div class="picture">
                 <img src="../assets/me.png" alt="me" height="400px" width="400px">
