--- a/about.html
+++ b/about.html
@@ -5,48 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="../assets/style.css">
-    
+    <!-- Inline styles moved to the head section -->
+    <style>
+        body {
+            background-image: url('../assets/pro.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
     <!--header-->
     <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo"><a href="#"><span style="color: red;">Ker</span>by</a></div>
-                    <ul class="nav-links">
-                        <li><a href="../index.html"> Home </a></li>
-                        <li><a href="../page/about.html"><span style="color: red;">About</span></a></li>
-                        <li><a href="../page/Experience.html">Experience</a></li>
-                    </ul>
-                    <button><a href="../page/contact.html">Contact me</a></button>
-                </div>
-            </nav>
+        <nav class="navbar">
+            <div class="navdiv">
+                <div class="logo"><a href="#"><span style="color: red;">Ker</span>by</a></div>
+                <ul class="nav-links">
+                    <li><a href="../index.html"> Home </a></li>
+                    <li><a href="../page/about.html"><span style="color: red;">About</span></a></li>
+                    <li><a href="../page/Experience.html">Experience</a></li>
+                </ul>
+                <button><a href="../page/contact.html">Contact me</a></button>
+            </div>
+        </nav>
     </header>
-     
-    <!--body-->
-    <head>
-        <style>
-body {
-  background-image: url('../assets/pro.png'); 
-  background-repeat: no-repeat; 
-  background-size: cover; 
-  background-position: center;
-  background-attachment: fixed;
-}
-</style>
-    </head>
-    <body>
-        <div class="container">
-            <div class="text">
-        <p class="second text"><b>I started my journey as a Front-End Developer since i was studying in Cordva Public College</b>
-            <br><b> I learned a lot of different programming language during my College years.</b></p>
-            </div>
-            <div class="picture">
-                <img src="../assets/me.png" alt="me" height="400px" width="400px">
-            </div>
+
+    <!--body content-->
+    <div class="container">
+        <div class="text">
+            <p class="second text">
+                <b>I started my journey as a Front-End Developer since i was studying in Cordova Public College</b> 
+                <br>
+                <b>I learned a lot of different programming language during my College years.</b>
+            </p>
         </div>
-    </body>
+        <div class="picture">
+            <img src="../assets/me.png" alt="me" height="400px" width="400px">
+        </div>
+    </div>
 
 </body>
 </html>
-
