--- a/index.html
+++ b/index.html
@@ -6,47 +6,44 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="icon" href="../assets/pro.png">
+    <!-- Combined all style definitions here -->
+    <style>
+        body {
+            background-image: url('./assets/pro.png'); /* Ensure this path is correct */
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
-    <!--header-->
+    <!-- header -->
     <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo"><a href="#"><span style="color: red;">Ker</span>by</a></div>
-                    <ul class="nav-links">
-                        <li><a href="index.html"><span style="color: red;">Home</span></a></li>
-                        <li><a href="./page/about.html">About</a></li>
-                        <li><a href="./page/Experience.html">Experience</a></li>
-                    </ul>
-                    <button><a href="./page/contact.html">Contact me</a></button>
-                </div>
-            </nav>
+        <nav class="navbar">
+            <div class="navdiv">
+                <div class="logo"><a href="#"><span style="color: red;">Ker</span>by</a></div>
+                <ul class="nav-links">
+                    <li><a href="index.html"><span style="color: red;">Home</span></a></li>
+                    <li><a href="./page/about.html">About</a></li>
+                    <li><a href="./page/Experience.html">Experience</a></li>
+                </ul>
+                <button><a href="./page/contact.html">Contact me</a></button>
+            </div>
+        </nav>
     </header>
-     
-    <!--body-->
-    <head>
-        <style>
-body {
-  background-image: url('./assets/pro.png'); 
-  background-repeat: no-repeat; 
-  background-size: cover; 
-  background-position: center;
-  background-attachment: fixed;
-}
-</style>
-    </head>
-    <body>
-        <div class="container">
-            <div class="text">
 
-        <p class="first text">Hi I'm <span style="color: rgb(219, 56, 27);">Kerby</span></p>
-        <p class="first text">a Frontend Developer</p>
-            </div>
-            <div class="picture">
-                <img src="./assets/me.png" alt="me" height="400px" width="400px">
-            </div>
+    <!-- body content -->
+    <div class="container">
+        <div class="text">
+            <p class="first text">Hi I'm <span style="color: rgb(219, 56, 27);">Kerby</span></p>
+            <p class="first text">a Frontend Developer</p>
         </div>
-    </body>
-
+        <div class="picture">
+            <img src="./assets/me.png" alt="me" height="400px" width="400px">
+        </div>
+    </div>
+    
+    <!-- No content should be placed outside the body tag -->
 </body>
 </html>
