--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html"><span style="color: red;">Home</span></a></li>
                     <li><a href="./page/about.html">About</a></li>
-                    <li><a href="./page/Experience.html">Experience</a></li>
+                    <li><a href="../page/Experience.html">Experience</a></li>
                 </ul>
                 <button><a href="./page/contact.html">Contact me</a></button>
             </div>
