--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="index.html"><span style="color: red;">Home</span></a></li>
                     <li><a href="./page/about.html">About</a></li>
                     <li><a href="./page/Experience.html">Experience</a></li>
+                    <li><a href="https://www.figma.com/slides/5gPD7VL85eofwaIXCqg4lU/SIPP-G1?node-id=1-92&t=NsNMI5f4CuGXGp1R-0">Visit Example</a></li>
                 </ul>
                 <button><a href="./page/contact.html">Contact me</a></button>
             </div>
