--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html"><span style="color: red;">Home</span></a></li>
                     <li><a href="./page/about.html">About</a></li>
                     <li><a href="./page/Experience.html">Experience</a></li>
-                    <li><a href="./page/project.hmtl">Visit Example</a></li>
+                    <li><a href="./page/project.hmtl">project</a></li>
                 </ul>
                 <button><a href="./page/contact.html">Contact me</a></button>
             </div>
